--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     {{{body}}}
